--- a/index.html
+++ b/index.html
@@ -2,4 +2,6 @@
 <html>
 </html>
      <head>
-         <title>Alura Plus</title>
+        <title>Alura Plus</title>
+        <meta charset="UFT-8">
+        <meta name="viewport" content="width=device-width"
