--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@
   <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alu-
     ra Língua por um preço único.</h1>
 </body>
+<img src="Combo.png"
 </html>
